force-app/main/default/objects/Preference__c/Preference__c.object-meta.xml
<CustomObject>
    <label>Preference</label>
    <nameField>
        <displayFormat>PID-{0000}</displayFormat>
        <label>Preference ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>