force-app/main/default/objects/Preference__c/fields/Behavioral_Support_Willingness_If_any__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Support_Willingness_If_any__c</fullName>
    <label>Behavioral Support Willingness(If any)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mild</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Severe</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>