force-app/main/default/objects/Preference__c/fields/Education_Needs__c.field-meta.xml
<CustomField>
    <fullName>Education_Needs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Education Needs</label>
    <type>Checkbox</type>
</CustomField>