force-app/main/default/objects/Preference__c/fields/Gender_Preference__c.field-meta.xml
<CustomField>
    <fullName>Gender_Preference__c</fullName>
    <label>Gender Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Non-Binary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>