force-app/main/default/objects/Preference__c/fields/Max_Children_Willing_to_Foster__c.field-meta.xml
<CustomField>
    <fullName>Max_Children_Willing_to_Foster__c</fullName>
    <label>Max Children Willing to Foster</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>