force-app/main/default/objects/Preference__c/fields/Medical_Needs_Willingness__c.field-meta.xml
<CustomField>
    <fullName>Medical_Needs_Willingness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Needs Willingness?</label>
    <type>Checkbox</type>
</CustomField>