force-app/main/default/objects/Preference__c/fields/Other_Race__c.field-meta.xml
<CustomField>
    <fullName>Other_Race__c</fullName>
    <label>Other_Race</label>
    <length>255</length>
    <type>Text</type>
</CustomField>