force-app/main/default/objects/Preference__c/fields/Other_Religion__c.field-meta.xml
<CustomField>
    <fullName>Other_Religion__c</fullName>
    <label>Other Religion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>