force-app/main/default/objects/Preference__c/fields/Pet_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Pet_Ownership__c</fullName>
    <label>Pet Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>