force-app/main/default/objects/Preference__c/fields/Preferred_Age_Range_Min__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Age_Range_Min__c</fullName>
    <label>Preferred_Age_Range_Min</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>