force-app/main/default/objects/Preference__c/fields/Preferred_School_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_School_Name__c</fullName>
    <label>Preferred_School_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>