force-app/main/default/objects/Preference__c/fields/Previous_Foster_Experience__c.field-meta.xml
<CustomField>
    <fullName>Previous_Foster_Experience__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previous Foster Experience</label>
    <type>Checkbox</type>
</CustomField>