force-app/main/default/objects/Preference__c/fields/Sibling_Group_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Sibling_Group_Acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sibling Group Acceptance</label>
    <type>Checkbox</type>
</CustomField>