force-app/main/default/objects/Preference__c/fields/Special_Needs_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Special_Needs_Acceptance__c</fullName>
    <label>Special Needs Acceptance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical Needs</fullName>
            </value>
            <value>
                <fullName>Behavioral Needs</fullName>
            </value>
            <value>
                <fullName>Therapy Required</fullName>
            </value>
            <value>
                <fullName>Medication Required</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>