force-app/main/default/objects/Preference__c/fields/Transportation_Availability__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Availability__c</fullName>
    <label>Transportation Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>